# AcademicHelper

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: cassandra.md  data-quality-reviewer.md  diogenes.md  ethics-reviewer.md  literature-reviewer.md  methodology-reviewer.md  practical-reviewer.md  socrates.md
skills/can-this-work/: SKILL.md
skills/committee-review/: SKILL.md
skills/relevance/: SKILL.md
skills/research/: SKILL.md
skills/suggest-direction/: SKILL.md
src/academic_helper/: __init__.py  server.py
src/academic_helper/models/: __init__.py  committee.py  domain.py  evaluation.py  paper.py  source.py
src/academic_helper/prompts/: __init__.py  templates.py
src/academic_helper/sources/: __init__.py  base.py  crossref.py  openalex.py  registry.py  search.py  semantic_scholar.py
src/academic_helper/tools/: __init__.py  committee.py  evaluate.py  gaps.py  pdf.py  search.py
tests/: conftest.py  test_committee.py  test_evaluate.py  test_gaps.py  test_models.py  test_registry_lifecycle.py  test_server.py  test_sources.py  test_sources_extended.py  test_tools.py
